# Repo

./: .gitignore  git_commands.help
Kata(CodeWars)/: handshakes.py
RandomCodes/: Turtle_Fibonacci.py
autoperevirka/Module 5/: m5ex1.py  m5ex2.py  m5ex4.py  m5ex5.py  m5ex6.py  m5ex9.py
autoperevirka/Module 6/: m6ex1.py  m6ex2.py  m6ex3.py
autoperevirka/module_12/: m12.ex9.py
autoperevirka/module_2/: m2ex13.py  m2ex15.py  m2ex15v2.py
autoperevirka/module_5/: m5ex10.py  m5ex11.py  m5ex12.py  m5ex13.py  m5ex14.py  m5ex15.py  m5ex3.py  m5ex7.py
autoperevirka/module_6/: m6ex10.py  m6ex12.py  m6ex13.py  m6ex14.py  m6ex4.py  m6ex5.py  m6ex6.py  m6ex7.py  m6ex8.py  m6ex9.py
autoperevirka/module_7/: m7ex1.py  m7ex10.py  m7ex4.py  (+13 more)
core/: fibonacci.py  file_read.py  functools_reduce.py  table_format.py
flask_test/: Dockerfile  app.py
goit_homework/aiohttp_pb_api/: pyproject.toml
goit_homework/aiohttp_pb_api/app/: exchage_classes.py  server.py
goit_homework/aiohttp_pb_api/first_task/: main_simple.py
goit_homework/alchemy_alembic_postgreSQL/: alembic.ini  models.py  my_select.py  pyproject.toml  seed.py  temp.sql
goit_homework/alchemy_alembic_postgreSQL/alembic/versions/: ea5783728fe8_init.py
goit_homework/postreSQL_university/: fill_data.py  pyproject.toml
goit_homework/postreSQL_university/SQL_queries/: query_1.sql  query_10.sql  query_2.sql  query_3.sql  query_4.sql  query_5.sql  query_6.sql  query_7.sql  query_8.sql  query_9.sql  university.sql
kata_codewars/:  knights_tour.py  ?subarrays_odd_numbers.py  RGB_To_Hex.py
random_codes/: game_gusak.py
(+47 files in other folders)
