[tool.poetry]
name = "aiohttp-pb-api"
version = "0.1.0"
description = ""
authors = ["Sergii Pryima <spryima@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.8.5"
requests = "^2.31.0"
websockets = "^11.0.3"
names = "^0.3.0"
aiofiles = "^23.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
