[tool.poetry]
name = "alchemy-alembic-postgresql"
version = "0.1.0"
description = "PostgreSQL with Alchemy and Alembic"
authors = ["Sergii Pryima"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.21"
alembic = "^1.12.0"
psycopg2-binary = "^2.9.9"
faker = "^19.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
